--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vobi/react-form",
-  "version": "0.0.4-alpha",
+  "version": "0.0.5-alpha",
   "description": "Reusable form library for React: Form component, withForm HOC, useForm hook",
   "main": "./lib/index.js",
   "license": "MIT",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0"
   }
