--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vobi/react-form",
-  "version": "0.0.7-alpha",
+  "version": "0.0.9-alpha",
   "description": "Reusable form library for React: Form component, withForm HOC, useForm hook",
   "main": "./lib/index.js",
   "license": "MIT",
@@ -27,5 +27,8 @@
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0"
+  },
+  "dependencies": {
+    "validator": "^10.11.0"
   }
 }
